--- a/meteor/imports/ui/components/config/codes/index.css
+++ b/meteor/imports/ui/components/config/codes/index.css
@@ -26,13 +26,45 @@
     .print-password-title {
         width: 100%;
         font-size: xx-large;
+        padding-left: 15pt;
+    }
+
+    .print-block-header {
+        border-style: solid;
+        border-width: 1px;
+        background-color: #ced1d3;
+    }
+
+    .print-block-content {
+        border-bottom: solid;
+        border-right: solid;
+        border-left: solid;
+        border-width: 1px
+    }
+    .print-name-subtitle {
+        font-size: x-large;
+        font-weight: normal;
+        padding-left: 15pt;
+    }
+
+    .print-password-subtitle {
+        font-size: x-large;
+        font-weight: normal;;
+        float:right;
+        padding-right: 15pt;
     }
 
     .print-name-field {
         text-align: left;
+        font-size: x-large;
+        height: 45pt;
+        padding-left: 15pt;
     }
 
     .print-password-field {
         text-align: right;
+        font-size: x-large;
+        height: 45pt;
+        padding-right: 15pt;
     }
 }
