--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -31,8 +31,7 @@
                                     {{/each}}
                                     {{#if isEmpty sportType}}
                                         <div class="content-block">
-                                            <p style="text-align: center;">Wie es scheint haben wir bis jetzt keinerlei
-                                                Messdaten.</p>
+                                            <p style="text-align: center;">Es wurden noch keine Messdaten übermittelt.</p>
                                         </div>
                                     {{/if}}
                                     {{#if isNotEmpty nonPermittedSportTypes}}
