Added name attribute to password field for browser auto-fill

--- a/meteor/imports/ui/components/login/login/index.html
+++ b/meteor/imports/ui/components/login/login/index.html
@@ -10,7 +10,8 @@
                             <div class="item-inner">
                                 <div class="item-title label">{{type}}</div>
                                 <div class="item-input">
-                                    <input type="password" placeholder="Passwort" data-type="{{type}}">
+                                    <input type="password" placeholder="Passwort" name="input-{{type}}"
+                                           data-type="{{type}}">
                                 </div>
                             </div>
                         </li>
