--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -45,7 +45,13 @@
             <div class="page-content">
                 {{#each a in list_athletes}}
                     {{#with a}}
-                        <div class="content-block-title">{{name}}</div>
+                        <div class="content-block-title" style="height: 20px;">
+                            {{name}}
+                            <svg class="checkmark check" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                                <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/>
+                                <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
+                            </svg>
+                        </div>
                         <div class="list-block">
                             <ul>
                                 <li>
