--- a/meteor/imports/ui/components/output/checkmark.scss
+++ b/meteor/imports/ui/components/output/checkmark.scss
@@ -1,5 +1,6 @@
 @import "{wolves:bourbon}/bourbon";
 
+$color--red: #DC143C;
 $color--green: #7ac142;
 $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 
@@ -31,7 +32,7 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 }
 
 .check {
-  animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+  animation: checkfill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
 }
 
 .check .checkmark__circle {
@@ -39,6 +40,45 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 }
 
 .check .checkmark__check {
+  animation: stroke .3s $curve .8s forwards;
+}
+
+.xmark {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  stroke-width: 2;
+  stroke: #fff;
+  stroke-miterlimit: 10;
+  margin-left: 10px;
+  margin-bottom: -5px;
+  box-shadow: inset 0px 0px 0px $color--red;
+}
+
+.xmark__circle {
+  stroke-dasharray: 166;
+  stroke-dashoffset: 166;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+  stroke: $color--red;
+  fill: none;
+}
+
+.xmark__check {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+}
+
+.xm {
+  animation: xfill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+}
+
+.xm .xmark__circle {
+  animation: stroke .6s $curve forwards;
+}
+
+.xm .xmark__check {
   animation: stroke .3s $curve .8s forwards;
 }
 
@@ -57,8 +97,14 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
   }
 }
 
-@keyframes fill {
+@keyframes checkfill {
   100% {
     box-shadow: inset 0px 0px 0px 30px $color--green;
+  }
+}
+
+@keyframes xfill {
+  100% {
+    box-shadow: inset 0px 0px 0px 30px $color--red;
   }
 }
