--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -48,8 +48,12 @@
                         <div class="content-block-title" style="height: 20px;">
                             {{name}}
                             <svg class="checkmark check" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
-                                <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/>
-                                <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
+                                <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"></circle>
+                                <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"></path>
+                            </svg>
+                            <svg class="xmark xm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                                <circle class="xmark__circle" cx="26" cy="26" r="25" fill="none"></circle>
+                                <path class="xmark__check" fill="none" d="M15 15 L37 37 M15 37 L 37 15"></path>
                             </svg>
                         </div>
                         <div class="list-block">
