--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -46,7 +46,7 @@
                 <div class="list-block">
                     <ul>
                         {{#each a in athletes}}
-                            {{>result athlete=a}}
+                            {{>result athlete=a checkmarks=true}}
                         {{/each}}
                     </ul>
                 </div>
@@ -55,7 +55,7 @@
                 <div class="list-block">
                     <ul>
                         {{#each a in doneAthletes}}
-                            {{>result athlete=a}}
+                            {{>result athlete=a checkmarks=false}}
                         {{/each}}
                     </ul>
                 </div>
@@ -74,23 +74,25 @@
                     <div style="display: inline-block">
                         <div class="item-title"
                              style="display: inline-block; vertical-align: middle;">{{name}}</div>
-                        {{#if valid}}
-                            <svg style="display: inline-block"
-                                 class="checkmark {{#if certificateWritten}}check{{/if}}"
-                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
-                                <circle class="checkmark__circle" cx="26" cy="26" r="25"
-                                        fill="none"></circle>
-                                <path class="checkmark__check" fill="none"
-                                      d="M14.1 27.2l7.1 7.2 16.7-16.8"></path>
-                            </svg>
-                        {{else}}
-                            <svg class="xmark xm" xmlns="http://www.w3.org/2000/svg"
-                                 viewBox="0 0 52 52">
-                                <circle class="xmark__circle" cx="26" cy="26" r="25"
-                                        fill="none"></circle>
-                                <path class="xmark__check" fill="none"
-                                      d="M15 15 L37 37 M15 37 L 37 15"></path>
-                            </svg>
+                        {{#if ../checkmarks}}
+                            {{#if valid}}
+                                <svg style="display: inline-block"
+                                     class="checkmark {{#if certificateWritten}}check{{/if}}"
+                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                                    <circle class="checkmark__circle" cx="26" cy="26" r="25"
+                                            fill="none"></circle>
+                                    <path class="checkmark__check" fill="none"
+                                          d="M14.1 27.2l7.1 7.2 16.7-16.8"></path>
+                                </svg>
+                            {{else}}
+                                <svg class="xmark xm" xmlns="http://www.w3.org/2000/svg"
+                                     viewBox="0 0 52 52">
+                                    <circle class="xmark__circle" cx="26" cy="26" r="25"
+                                            fill="none"></circle>
+                                    <path class="xmark__check" fill="none"
+                                          d="M15 15 L37 37 M15 37 L 37 15"></path>
+                                </svg>
+                            {{/if}}
                         {{/if}}
                     </div>
                 </div>
