Changed animation of checkmarks

--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -81,7 +81,8 @@
                         {{#if ../checkmarks}}
                             {{#if valid}}
                                 <svg style="display: inline-block"
-                                     class="checkmark {{#if certificateWritten}}check{{/if}}"
+                                     class="checkmark {{#if certificateWritten}}checked{{/if}}{{#if
+                                             certificateWrittenAnimated}}check{{/if}}"
                                      xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
                                     <circle class="checkmark__circle" cx="26" cy="26" r="25"
                                             fill="none"></circle>
