--- a/meteor/imports/ui/components/output/checkmark.scss
+++ b/meteor/imports/ui/components/output/checkmark.scss
@@ -35,12 +35,24 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
   animation: checkfill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
 }
 
-.checkmark:hover .checkmark__circle {
+.check .checkmark__circle {
   animation: stroke .6s $curve forwards;
 }
 
 .check .checkmark__check {
   animation: stroke .3s $curve .8s forwards;
+}
+
+.checked {
+  animation: checkfill 0s ease-in-out 0s forwards, scale 0s ease-in-out 0s both;
+}
+
+.checked .checkmark__circle {
+  animation: stroke 0s $curve forwards;
+}
+
+.checked .checkmark__check {
+  animation: stroke 0s $curve 0s forwards;
 }
 
 .xmark {
@@ -80,6 +92,18 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 
 .xm .xmark__check {
   animation: stroke .3s $curve .8s forwards;
+}
+
+.xmed {
+  animation: xfill 0s ease-in-out 0s forwards, scale 0s ease-in-out 0s both;
+}
+
+.xmed .xmark__circle {
+  animation: stroke 0s $curve forwards;
+}
+
+.xmed .xmark__check {
+  animation: stroke 0s $curve 0s forwards;
 }
 
 @keyframes stroke {
