--- a/meteor/imports/ui/components/config/athletes/right/index.html
+++ b/meteor/imports/ui/components/config/athletes/right/index.html
@@ -32,6 +32,7 @@
                         <!-- First name -->
                         <li>
                             <div class="item-content">
+                                <div class="item-media"><i class="f7-icons">person</i></div>
                                 <div class="item-inner">
                                     <div class="item-title label">Vorname</div>
                                     <div class="item-input">
@@ -44,6 +45,7 @@
                         <!-- Family name -->
                         <li>
                             <div class="item-content">
+                                <div class="item-media"><i class="f7-icons">person</i></div>
                                 <div class="item-inner">
                                     <div class="item-title label">Nachname</div>
                                     <div class="item-input">
@@ -56,6 +58,7 @@
                         <!-- birthyear -->
                         <li>
                             <div class="item-content">
+                                <div class="item-media"><i class="f7-icons">today</i></div>
                                 <div class="item-inner">
                                     <div class="item-title label">Geb.-Jahr</div>
                                     <div class="item-input">
@@ -68,6 +71,7 @@
                         <!-- gender -->
                         <li>
                             <div class="item-content">
+                                <div class="item-media"><i class="f7-icons">persons</i></div>
                                 <div class="item-inner">
                                     <div class="item-title label">Geschlecht</div>
                                     <div class="item-input">
@@ -82,6 +86,7 @@
                         <!-- start_class -->
                         <li>
                             <div class="item-content">
+                                <div class="item-media"><i class="f7-icons">star</i></div>
                                 <div class="item-inner">
                                     <div class="item-title label">Startklasse</div>
                                     <div class="item-input">
