--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -52,7 +52,7 @@
                     <div class="list-block">
                         <ul>
                             {{#each a in athletes}}
-                                {{>result athlete=a checkmarks=true}}
+                                {{>result athlete=a}}
                             {{/each}}
                         </ul>
                     </div>
@@ -63,7 +63,7 @@
                     <div class="list-block">
                         <ul>
                             {{#each a in doneAthletes}}
-                                {{>result athlete=a checkmarks=false}}
+                                {{>result athlete=a}}
                             {{/each}}
                         </ul>
                     </div>
@@ -120,46 +120,46 @@
         <li class="accordion-item {{#if not certificateWritten}}{{#if
                 valid}}accordion-item-expanded{{/if}}{{/if}}">
             <a href="#" class="item-content item-link">
+                <div class="item-media">
+                    {{#if certificateUpdate}}
+                        <svg style="display: inline-block"
+                             class="warning warn"
+                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                            <circle class="warning__circle" cx="26" cy="26" r="25"
+                                    fill="none"></circle>
+                            <path class="warning__dash" fill="none"
+                                  d="M26 11.5 l0 20.5"></path>
+                            <circle class="warning__dot" cx="26" cy="40" r="1" fill="white"></circle>
+                        </svg>
+                    {{/if}}
+                    {{#if valid}}
+                        <svg style="display: inline-block"
+                             class="checkmark {{#if certificateWritten}}check{{/if}}"
+                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                            <circle class="checkmark__circle" cx="26" cy="26" r="25"
+                                    fill="none"></circle>
+                            <path class="checkmark__check" fill="none"
+                                  d="M14.1 27.2l7.1 7.2 16.7-16.8"></path>
+                        </svg>
+                    {{else}}
+                        <svg class="xmark xm" xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 52 52">
+                            <circle class="xmark__circle" cx="26" cy="26" r="25"
+                                    fill="none"></circle>
+                            <path class="xmark__check" fill="none"
+                                  d="M15 15 L37 37 M15 37 L 37 15"></path>
+                        </svg>
+                    {{/if}}
+                </div>
                 <div class="item-inner">
                     <div style="display: inline-block">
                         <div class="item-title" style="display: inline-block; vertical-align: middle;">{{name}}</div>
-                        {{#if ../checkmarks}}
-                            {{#if certificateUpdate}}
-                                <svg style="display: inline-block"
-                                     class="warning warn"
-                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
-                                    <circle class="warning__circle" cx="26" cy="26" r="25"
-                                            fill="none"></circle>
-                                    <path class="warning__dash" fill="none"
-                                          d="M26 11.5 l0 20.5"></path>
-                                    <circle class="warning__dot" cx="26" cy="40" r="1" fill="white"></circle>
-                                </svg>
-                            {{/if}}
-                            {{#if valid}}
-                                <svg style="display: inline-block"
-                                     class="checkmark {{#if certificateWritten}}check{{/if}}"
-                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
-                                    <circle class="checkmark__circle" cx="26" cy="26" r="25"
-                                            fill="none"></circle>
-                                    <path class="checkmark__check" fill="none"
-                                          d="M14.1 27.2l7.1 7.2 16.7-16.8"></path>
-                                </svg>
-                            {{else}}
-                                <svg class="xmark xm" xmlns="http://www.w3.org/2000/svg"
-                                     viewBox="0 0 52 52">
-                                    <circle class="xmark__circle" cx="26" cy="26" r="25"
-                                            fill="none"></circle>
-                                    <path class="xmark__check" fill="none"
-                                          d="M15 15 L37 37 M15 37 L 37 15"></path>
-                                </svg>
-                            {{/if}}
-                        {{/if}}
                     </div>
                 </div>
             </a>
             <div style="clear: both"></div>
             <div class="accordion-item-content">
-                <div class="content-block">
+                <div class="content-block" style="padding-left: 65px;">
                     {{#if certificateUpdate}}
                         <p style="text-align:left;">
                             Die Urkunde muss neu erstellt werden, da sich die Punktzahl des Athleten geändert hat.
@@ -184,7 +184,7 @@
                         {{#if valid}}
                             <p>
                                 <a href="#" class="item-link list-button signCertificate" data-id="{{id}}">Urkunde
-                                    fertigstellen</a>
+                                    wurde erstellt</a>
                             </p>
                         {{/if}}
                     {{else}}
