Added icon to athletes

--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -132,26 +132,39 @@
                 valid}}accordion-item-expanded{{/if}}{{/if}}">
             <a href="#" class="item-content item-link">
                 <div class="item-media">
-                    {{#if certificateUpdate}}
-                        <svg style="display: inline-block"
-                             class="warning warn"
-                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
-                            <circle class="warning__circle" cx="26" cy="26" r="25"
-                                    fill="none"></circle>
-                            <path class="warning__dash" fill="none"
-                                  d="M26 11.5 l0 20.5"></path>
-                            <circle class="warning__dot" cx="26" cy="40" r="1" fill="white"></circle>
-                        </svg>
-                    {{/if}}
+
                     {{#if valid}}
-                        <svg style="display: inline-block"
-                             class="checkmark {{#if certificateWritten}}check{{/if}}"
-                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
-                            <circle class="checkmark__circle" cx="26" cy="26" r="25"
-                                    fill="none"></circle>
-                            <path class="checkmark__check" fill="none"
-                                  d="M14.1 27.2l7.1 7.2 16.7-16.8"></path>
-                        </svg>
+                        {{#if certificateUpdate}}
+                            <svg style="display: inline-block"
+                                 class="warning warn"
+                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                                <circle class="warning__circle" cx="26" cy="26" r="25"
+                                        fill="none"></circle>
+                                <path class="warning__dash" fill="none"
+                                      d="M26 11.5 l0 20.5"></path>
+                                <circle class="warning__dot" cx="26" cy="40" r="1" fill="white"></circle>
+                            </svg>
+                        {{else}}
+                            {{#if certificateWritten}}
+                                <svg style="display: inline-block"
+                                     class="checkmark check"
+                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                                    <circle class="checkmark__circle" cx="26" cy="26" r="25"
+                                            fill="none"></circle>
+                                    <path class="checkmark__check" fill="none"
+                                          d="M14.1 27.2l7.1 7.2 16.7-16.8"></path>
+                                </svg>
+                            {{else}}
+                                <svg style="display: inline-block"
+                                     class="warning warn"
+                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                                    <circle class="warning__circle" cx="26" cy="26" r="25"
+                                            fill="none"></circle>
+                                    <path class="warning__dash" fill="none"
+                                          d="M11.5 26 L40.5 26"></path>
+                                </svg>
+                            {{/if}}
+                        {{/if}}
                     {{else}}
                         <svg class="xmark xm" xmlns="http://www.w3.org/2000/svg"
                              viewBox="0 0 52 52">
