--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -176,7 +176,8 @@
             </a>
         </div>
         <div class="list-block"
-             style="{{#if gap}}margin-bottom: 100px; padding-bottom: 100px; border-bottom: 1px solid gray;{{/if}}">
+             style="{{#if
+                     gap}}margin-bottom: 70px; padding-bottom: 70px; border-bottom: 1px solid rgb(200, 200, 200);{{/if}}">
             <ul>
                 {{#each m in measurements}}
                     {{>attempt n=@index measurement=m metadata=metadata}}
