Added impressum and datenschutzerklärung (closes #74)

--- a/meteor/imports/ui/components/login/choices/index.html
+++ b/meteor/imports/ui/components/login/choices/index.html
@@ -14,4 +14,20 @@
     <div class="list-block">
         <div class="list-block-label">{{competition_notice}}</div>
     </div>
+    <div style="position: absolute; bottom: 40px; cursor: pointer; width: 100%;">
+        <table align="center">
+            <tr>
+                <td style="border-right: 1px solid lightgrey; padding-right: 20px;">
+                    <div data-popup=".popup-impressum" class="open-popup" style="text-align: center;">
+                        Impressum
+                    </div>
+                </td>
+                <td style="padding-left: 20px;">
+                    <div data-popup=".popup-datanschutz" class="open-popup" style="text-align: center;">
+                        Datenschutzerklärung
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
 </template>
