--- a/meteor/imports/ui/components/output/checkmark.scss
+++ b/meteor/imports/ui/components/output/checkmark.scss
@@ -8,15 +8,15 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 // Checkmark
 
 .checkmark {
-  width: 20px;
-  height: 20px;
+  width: 20;
+  height: 20;
   border-radius: 50%;
   stroke-width: 2;
   stroke: #fff;
   stroke-miterlimit: 10;
-  margin-left: 10px;
+  margin-left: 10;
   margin-bottom: -5px;
-  box-shadow: inset 0px 0px 0px $color--green;
+  box-shadow: inset 0 0 0 $color--green;
 }
 
 .checkmark__circle {
@@ -49,15 +49,15 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 // X-Mark
 
 .xmark {
-  width: 20px;
-  height: 20px;
+  width: 20;
+  height: 20;
   border-radius: 50%;
   stroke-width: 2;
   stroke: #fff;
   stroke-miterlimit: 10;
-  margin-left: 10px;
+  margin-left: 10;
   margin-bottom: -5px;
-  box-shadow: inset 0px 0px 0px $color--red;
+  box-shadow: inset 0 0 0 $color--red;
 }
 
 .xmark__circle {
@@ -90,15 +90,15 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 // Exclamation mark
 
 .warning {
-  width: 20px;
-  height: 20px;
+  width: 20;
+  height: 20;
   border-radius: 50%;
   stroke-width: 2;
   stroke: #fff;
   stroke-miterlimit: 10;
-  margin-left: 10px;
+  margin-left: 10;
   margin-bottom: -5px;
-  box-shadow: inset 0px 0px 0px $color--yellow;
+  box-shadow: inset 0 0 0 $color--yellow;
 }
 
 .warning__circle {
@@ -157,18 +157,18 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 
 @keyframes checkfill {
   100% {
-    box-shadow: inset 0px 0px 0px 30px $color--green;
+    box-shadow: inset 0 0 0 30 $color--green;
   }
 }
 
 @keyframes xfill {
   100% {
-    box-shadow: inset 0px 0px 0px 30px $color--red;
+    box-shadow: inset 0 0 0 30 $color--red;
   }
 }
 
 @keyframes warnfill {
   100% {
-    box-shadow: inset 0px 0px 0px 30px $color--yellow;
+    box-shadow: inset 0 0 0 30 $color--yellow;
   }
 }
