--- a/meteor/imports/ui/components/output/checkmark.scss
+++ b/meteor/imports/ui/components/output/checkmark.scss
@@ -8,13 +8,13 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 // Checkmark
 
 .checkmark {
-  width: 20;
-  height: 20;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   stroke-width: 2;
   stroke: #fff;
   stroke-miterlimit: 10;
-  margin-left: 10;
+  margin-left: 10px;
   margin-bottom: -5px;
   box-shadow: inset 0 0 0 $color--green;
 }
@@ -49,13 +49,13 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 // X-Mark
 
 .xmark {
-  width: 20;
-  height: 20;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   stroke-width: 2;
   stroke: #fff;
   stroke-miterlimit: 10;
-  margin-left: 10;
+  margin-left: 10px;
   margin-bottom: -5px;
   box-shadow: inset 0 0 0 $color--red;
 }
@@ -90,13 +90,13 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 // Exclamation mark
 
 .warning {
-  width: 20;
-  height: 20;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   stroke-width: 2;
   stroke: #fff;
   stroke-miterlimit: 10;
-  margin-left: 10;
+  margin-left: 10px;
   margin-bottom: -5px;
   box-shadow: inset 0 0 0 $color--yellow;
 }
@@ -157,18 +157,18 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 
 @keyframes checkfill {
   100% {
-    box-shadow: inset 0 0 0 30 $color--green;
+    box-shadow: inset 0 0 0 30px $color--green;
   }
 }
 
 @keyframes xfill {
   100% {
-    box-shadow: inset 0 0 0 30 $color--red;
+    box-shadow: inset 0 0 0 30px $color--red;
   }
 }
 
 @keyframes warnfill {
   100% {
-    box-shadow: inset 0 0 0 30 $color--yellow;
+    box-shadow: inset 0 0 0 30px $color--yellow;
   }
 }
