--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -154,8 +154,8 @@
         {{/if}}
 
         {{#if isNotEmpty invalidAthletes}}
-            <div class="content-block-title" data-swiper-parallax="-100" data-swiper-parallax-duration="500">Nicht
-                ausreichende Daten
+            <div class="content-block-title" data-swiper-parallax="-100" data-swiper-parallax-duration="500">Keine
+                ausreichenden Daten
             </div>
             <div class="list-block">
                 <ul>
@@ -168,7 +168,7 @@
 
         {{#if isNotEmpty doneAthletes}}
             <div class="content-block-title" data-swiper-parallax="-100" data-swiper-parallax-duration="500">
-                Fertiggestellte Urkunden
+                Fertige Urkunden
             </div>
             <div class="list-block">
                 <ul>
